kubernetes/system/shared-services-telegram/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-services-telegram
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
